# tutorials

./: .gitignore  README.md
demos/: README.md
demos/qt_ai_data_assistant/: LICENSE  README.md  requirements.txt
demos/qt_ai_data_assistant/config/: default.yaml
demos/qt_ai_data_assistant/examples/: simple_asr_riva.py  simple_human_detection.py  simple_llamaindex_rag.py  (+1 more)
demos/qt_ai_data_assistant_online/: .gitignore  README.md  requirements.txt
demos/qt_emotion_demo/: package.xml
demos/qt_emotion_game/: CMakeLists.txt  README.md
demos/qt_face_recognition/: CMakeLists.txt  README.md  face_recognition.py  package.xml
demos/qt_face_recognition_demo/: face_recognition.py
demos/qt_gesture_recognition/: CMakeLists.txt  README.md
demos/qt_gesture_recognition_demo/: CMakeLists.txt
demos/qt_gesturegame_app/: package.xml
demos/qt_idle_app/: CMakeLists.txt  package.xml
demos/qt_memory_game/: CMakeLists.txt  README.md  package.xml
demos/qt_microphone_demo/: README.md
demos/qt_microphone_detection/: README.md  requirements.txt  voice_direction.py
demos/qt_microphone_direction/: CMakeLists.txt
demos/qt_microphone_interaction/: README.md
demos/qt_range_of_motion/: README.md
demos/voice_recognition/: package.xml
emotion_interface/: qt_emotion_interface.py
examples/: README.md
examples/conversation_with_memory/: CMakeLists.txt  README.md  package.xml  requirements-RDV2.txt  requirements-RDV2AI@Edge.txt  requirements.txt
examples/faces_detection/: faces_detection.py
examples/gestures_detection/: gesture_detection.py
examples/gpt_demo/: CMakeLists.txt  README.md  package.xml  requirements.txt
examples/hands_detection/: hands_detection.py
examples/motors_command/: qt_motors_command.py
examples/motors_custom_controller/: CMakeLists.txt  README.md  motors_custom_controller_plugin.xml  package.xml
examples/motors_custom_controller/include/motors_custom_controller/: motors_custom_controller.h
examples/motors_custom_controller/src/: motors_custom_controller.cpp
examples/motors_custom_controller/srv/: StartStop.srv
examples/motors_moveit/: CMakeLists.txt  README.md  package.xml
examples/motors_moveit/config/: controllers.yaml  ompl_planning.yaml
examples/motors_moveit/data/: drawing.gcode  luxai.gcode
examples/motors_moveit/launch/: draw_gcode.launch  move_group.launch  moveit.rviz  moveit_qtrobot.launch  ompl_planning_pipeline.launch.xml  trajectory_execution.launch.xml
examples/motors_moveit/src/: draw_gcode.py  draw_rectangle.py  draw_spiral.py
examples/motors_state/: qt_motors_state.py
examples/offline_conversation/: CMakeLists.txt  README.md  package.xml  requirements.txt
examples/offline_conversation_2/: README.md  llm_prompts.py  main.py  requirements.txt
examples/qt_deep_face/: README.md  qt_deep_face.py  requirements-RDV2AI@Edge.txt
examples/qt_gspeech_interface/: CMakeLists.txt  README.md  requirements.txt
examples/qt_vosk_interface/: CMakeLists.txt  README.md  package.xml  requirements.txt
examples/skeletons_detection/: skeletons_detection.py
examples/voice_direction/: REAME.md  voice_direction.py
motors_gesture/: qt_motors_gesture.py
voice_direction/: voice_activity.py
(+188 files in other folders)
